ENH: changes to make file finding compatible with windows and OneDrive finding

--- a/updrsTapping_finding_storing_blocks.ipynb
+++ b/updrsTapping_finding_storing_blocks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ReTap - UPDRS-Tapping Assessment\n",
+    "## ReTap - UPDRS-Tapping Assessment - Automated 10-sec block selection\n",
     "\n",
     "This notebooks finds, plots, and stores 10-sec-tapping blocks out of raw accelerometer data.\n",
     "\n"
@@ -34,7 +34,6 @@
     "import sklearn as sk\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
-    "# import matplotlib.gridspec as gridspec\n",
     "\n",
     "import seaborn as sns\n",
     "from scipy import signal\n",
@@ -56,12 +55,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python sys 3.9.12 (main, Jun  1 2022, 06:36:29) \n",
-      "[Clang 12.0.0 ]\n",
-      "pandas 1.4.3\n",
-      "numpy 1.21.5\n",
-      "sci-py 1.7.3\n",
-      "sci-kit learn 1.1.1\n"
+      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
+      "pandas 1.4.4\n",
+      "numpy 1.23.3\n",
+      "sci-py 1.9.1\n",
+      "sci-kit learn 1.1.2\n"
      ]
     }
    ],
@@ -92,12 +90,18 @@
     "# pandas 1.4.3\n",
     "# numpy 1.21.5\n",
     "# sci-py 1.7.3\n",
-    "# sci-kit learn 1.1.1"
+    "# sci-kit learn 1.1.1\n",
+    "\n",
+    "# Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
+    "# pandas 1.4.4\n",
+    "# numpy 1.23.3\n",
+    "# sci-py 1.9.1\n",
+    "# sci-kit learn 1.1.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,36 +137,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import run_finding_10sec_blocks as run_blocks\n",
-    "\n",
-    "uncut_path = '/Users/jeroenhabets/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/ReTap/data/BER/UNCUT'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Sub056_Postop_M1S0_BStr_FTRHand - 20220819T104327.DATA.Poly5',\n",
-       " 'Sub55_postop_ M1S0_StreamingTap-20220801T111540.DATA.Poly5',\n",
-       " 'Sub056_Postop_M0S0_BStr_FTLHand - 20220819T092457.DATA.Poly5',\n",
-       " 'Sub057_Postop_M1S0_BStr_FT-20220826T114530.DATA.Poly5',\n",
-       " 'Sub056_Postop_M1S0_BStr_FTLHand - 20220819T104521.DATA.Poly5',\n",
-       " 'Sub057_Postop_M0S0_BStr_FT-20220826T102043.DATA.Poly5',\n",
-       " 'Sub056_Postop_M0S0_BStr_FTRHand - 20220819T092253.DATA.Poly5',\n",
-       " 'Sub55_postop_M0S0_StreamingTap-20220801T094752.DATA.Poly5']"
+       "'c:\\\\Users\\\\habetsj\\\\Research\\\\projects\\\\tapping\\\\code\\\\updrsTapping_repo'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import run_finding_10sec_blocks as run_blocks\n",
+    "\n",
+    "uncut_path = '/Users/jeroenhabets/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/ReTap/data/BER/UNCUT'\n",
+    "os.getcwd()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'win32'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Das System kann den angegebenen Pfad nicht finden: '/Users/jeroenhabets/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/ReTap/data/BER/UNCUT'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\habetsj\\Research\\projects\\tapping\\code\\updrsTapping_repo\\updrsTapping_finding_storing_blocks.ipynb Zelle 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/habetsj/Research/projects/tapping/code/updrsTapping_repo/updrsTapping_finding_storing_blocks.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m os\u001b[39m.\u001b[39;49mlistdir(uncut_path)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Das System kann den angegebenen Pfad nicht finden: '/Users/jeroenhabets/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/ReTap/data/BER/UNCUT'"
+     ]
     }
    ],
    "source": [
@@ -685,7 +713,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('updrsTapping')",
+   "display_name": "Python 3.9.13 ('retap')",
    "language": "python",
    "name": "python3"
   },
@@ -699,12 +727,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f0621c9b8aa60a8df3b6d56b3a59a35ac43d4d3d8937332cc4e1d97b67d9a738"
+    "hash": "f23a308fb4398211655e9950c8371f856de701ec09eac61c96054832e4a49057"
    }
   }
  },
