ENH: added utils-func for ftExtr, containinng Classes for ACC and FEATS per trace

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -31,6 +31,7 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import itertools\n",
     "import sklearn as sk\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,189 +129,139 @@
     "import tap_extract_fts.tapping_feat_boxplots as fts_boxplot\n",
     "\n",
     "# own helper functions\n",
-    "from utils import utils_dataManagement, tmsi_poly5reader, utils_preprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "013\n",
-      "014\n",
-      "007\n",
-      "015\n",
-      "Sub-scores for full stim-Ampltiude range extracted\n"
-     ]
-    }
-   ],
-   "source": [
-    "importlib.reload(tap_import)\n",
-    "importlib.reload(find_blocks)\n",
-    "\n",
-    "# define folder-directory of tap-data\n",
-    "\n",
-    "taptask = 'taps_rampStim_3x10s'\n",
-    "verbose=False\n",
-    "toPlot=True\n",
-    "subs_excl = []  #['014', '015']\n",
-    "\n",
-    "data_dir = os.path.join(proj_dir, 'data', taptask)\n",
-    "fig_dir = os.path.join(proj_dir, 'figures', taptask)\n",
-    "\n",
-    "sub_acc = {}\n",
-    "run_IDs, run_ID_files = tap_import.find_run_IDs(data_dir)\n",
-    "if verbose: print(f'Included subjects/sides to import: {run_IDs}')\n",
-    "\n",
-    "subscores = tap_import.tap3x10_updrs_scores(\n",
-    "    file_dir=os.path.join(data_dir, 'updrs_scores'),\n",
-    "    file_name='3x10s_updrs_subscores_all.csv',\n",
-    "    incl_stimRange=True,\n",
-    ")\n",
-    "# Manual correction of error in CSV\n",
-    "del(subscores['007_R_Off']['25mA'])\n",
-    "\n",
-    "sub_acc, block_acc, block_ind = {}, {}, {}\n",
-    "for runID in run_IDs:\n",
-    "        \n",
-    "        key = runID[3:]\n",
-    "        if verbose: print('\\nSTART', key)\n",
-    "        if key[:3] in subs_excl:\n",
-    "                if verbose: print(f'Skip sub {key}')\n",
-    "                continue\n",
-    "\n",
-    "        sub_acc[key] = tap_import.accData(\n",
-    "                OnFile=run_ID_files[runID]['on'],\n",
-    "                OffFile=run_ID_files[runID]['off'],\n",
-    "                orig_fs=250, wanted_fs=250,\n",
-    "                to_resample=False,\n",
-    "                to_check_polarity=True,\n",
-    "                to_check_magnOrder=True,\n",
-    "                verbose=False\n",
-    "        )\n",
-    "\n",
-    "        if verbose: print('Acc imported and preprocessed')\n",
-    "\n",
-    "        for med in ['Off', 'On']:\n",
-    "\n",
-    "                temp_acc, temp_ind = find_blocks.find_active_blocks(\n",
-    "                        acc_arr=getattr(sub_acc[key], med),\n",
-    "                        fs=250, verbose=False, to_plot=False,\n",
-    "                        figsave_dir=fig_dir,\n",
-    "                        figsave_name=f'{key}_{med}_blocks_detected'\n",
-    "                )\n",
-    "\n",
-    "                block_acc[f'{key}_{med}'] = temp_acc\n",
-    "                block_ind[f'{key}_{med}'] = temp_ind\n",
-    "                \n",
-    "                if verbose: print(\n",
-    "                        f'\\tFor {key}, Med-{med} '\n",
-    "                        f'block-arrays extracted'\n",
-    "                )\n",
-    "\n",
-    "\n"
+    "from retap_utils import utils_dataManagement, tmsi_poly5reader, utils_preprocessing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### EXTRACT FEATURES"
+    "### Load tapping-traces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['007_L_Off', '007_L_On', '007_R_Off', '007_R_On', '014_L_Off', '014_L_On', '014_R_Off', '014_R_On', '015_L_Off', '015_L_On', '015_R_Off', '015_R_On', '013_L_Off', '013_L_On', '013_R_Off', '013_R_On'])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# check which sessions present\n",
+    "# p = utils_dataManagement.find_stored_data_path('retapdata')\n",
+    "# xl_f = 'ReTap_participantLog.xlsx'\n",
     "\n",
-    "block_acc.keys()"
+    "# log = pd.read_excel(os.path.join(p, xl_f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## do DUS file renaming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start 007_L_Off\n",
-      "No taps detected for 007_L_Off 2mA_block 1\n",
-      "start 007_L_On\n",
-      "start 007_R_Off\n",
-      "No taps detected for 007_R_Off 05mA_block 1\n",
-      "No taps detected for 007_R_Off 05mA_block 3\n",
-      "No taps detected for 007_R_Off 1mA_block 1\n",
-      "No taps detected for 007_R_Off 1mA_block 2\n",
-      "No taps detected for 007_R_Off 1mA_block 3\n",
-      "No taps detected for 007_R_Off 15mA_block 1\n",
-      "No taps detected for 007_R_Off 15mA_block 3\n",
-      "No taps detected for 007_R_Off 2mA_block 1\n",
-      "No taps detected for 007_R_Off 2mA_block 2\n",
-      "No taps detected for 007_R_Off 2mA_block 3\n",
-      "start 007_R_On\n",
-      "start 014_L_Off\n",
-      "start 014_L_On\n",
-      "start 014_R_Off\n",
-      "start 014_R_On\n",
-      "start 015_L_Off\n",
-      "start 015_L_On\n",
-      "start 015_R_Off\n",
-      "start 015_R_On\n",
-      "start 013_L_Off\n",
-      "start 013_L_On\n",
-      "start 013_R_Off\n",
-      "start 013_R_On\n"
+      "start with BER\n",
+      "\tSTART sub: BER055\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block1_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_R_block1_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_R_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block1_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_L_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M0S0_R_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block1_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_R_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_R_block1_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_R_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block2_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block3_250Hz.csv\n",
+      "CSV reading Error in /Users/jeroenhabets/OneDrive - Charité - Universitätsmedizin Berlin/ReTap/data/BER/BER055_M1S0_L_block1_250Hz.csv\n",
+      "\tSTART sub: BER054\n",
+      "start with DUS\n",
+      "\tSTART sub: BER055\n",
+      "\tSTART sub: BER054\n"
      ]
     }
    ],
    "source": [
-    "importlib.reload(tap_ft_extr)\n",
-    "importlib.reload(tap_ft_extr)\n",
-    "importlib.reload(tap_fts_set)\n",
+    "data = FeatureSet(\n",
+    "    subs_incl = ['BER055', 'BER054']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('M0S0', 'L')\n",
+      "['BER052_M0S0_L_block1_250Hz.csv', 'BER052_M0S0_L_block3_250Hz.csv', 'BER052_M0S0_L_block2_250Hz.csv']\n",
+      "('M0S0', 'R')\n",
+      "['BER052_M0S0_L_block3_250Hz.csv', 'BER052_M0S0_R_block3_250Hz.csv', 'BER052_M0S0_R_block4_250Hz.csv', 'BER052_M0S0_R_block2_250Hz.csv', 'BER052_M0S0_L_block2_250Hz.csv', 'BER052_M0S0_L_block1_250Hz.csv', 'BER052_M0S0_R_block1_250Hz.csv']\n",
+      "('M1S0', 'L')\n",
+      "['BER052_M1S0_L_block1_250Hz.csv', 'BER052_M1S0_L_block3_250Hz.csv', 'BER052_M1S0_L_block2_250Hz.csv']\n",
+      "('M1S0', 'R')\n",
+      "['BER052_M1S0_R_block1_250Hz.csv', 'BER052_M1S0_R_block2_250Hz.csv', 'BER052_M1S0_L_block3_250Hz.csv', 'BER052_M1S0_R_block3_250Hz.csv', 'BER052_M1S0_L_block1_250Hz.csv', 'BER052_M1S0_L_block2_250Hz.csv']\n",
+      "('M0S0', 'L')\n",
+      "['BER029_M0S0_L_block3_250Hz.csv', 'BER029_M0S0_L_block2_250Hz.csv', 'BER029_M0S0_L_block1_250Hz.csv']\n",
+      "('M0S0', 'R')\n",
+      "['BER029_M0S0_L_block3_250Hz.csv', 'BER029_M0S0_L_block2_250Hz.csv', 'BER029_M0S0_R_block2_250Hz.csv', 'BER029_M0S0_L_block1_250Hz.csv', 'BER029_M0S0_R_block3_250Hz.csv', 'BER029_M0S0_R_block1_250Hz.csv']\n",
+      "('M0S1', 'L')\n",
+      "['BER029_M0S1_L_block3_250Hz.csv', 'BER029_M0S1_L_block2_250Hz.csv', 'BER029_M0S1_L_block1_250Hz.csv']\n",
+      "('M0S1', 'R')\n",
+      "['BER029_M0S1_R_block2_250Hz.csv', 'BER029_M0S1_L_block3_250Hz.csv', 'BER029_M0S1_R_block1_250Hz.csv', 'BER029_M0S1_R_block3_250Hz.csv', 'BER029_M0S1_L_block2_250Hz.csv', 'BER029_M0S1_L_block1_250Hz.csv']\n",
+      "('M1S0', 'L')\n",
+      "['BER029_M1S0_L_block3_250Hz.csv', 'BER029_M1S0_L_block2_250Hz.csv', 'BER029_M1S0_L_block1_250Hz.csv']\n",
+      "('M1S0', 'R')\n",
+      "['BER029_M1S0_R_block1_250Hz.csv', 'BER029_M1S0_L_block3_250Hz.csv', 'BER029_M1S0_L_block1_250Hz.csv', 'BER029_M1S0_R_block2_250Hz.csv', 'BER029_M1S0_R_block3_250Hz.csv', 'BER029_M1S0_L_block2_250Hz.csv']\n",
+      "('M1S1', 'L')\n",
+      "['BER029_M1S1_L_block2_250Hz.csv', 'BER029_M1S1_L_block3_250Hz.csv', 'BER029_M1S1_L_block1_250Hz.csv']\n",
+      "('M1S1', 'R')\n",
+      "['BER029_M1S1_R_block2_250Hz.csv', 'BER029_M1S1_R_block3_250Hz.csv', 'BER029_M1S1_R_block1_250Hz.csv', 'BER029_M1S1_L_block3_250Hz.csv', 'BER029_M1S1_L_block2_250Hz.csv', 'BER029_M1S1_L_block1_250Hz.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(utils_dataManagement)\n",
+    "cntr = 'BER'\n",
+    "datapath = utils_dataManagement.find_stored_data_path(cntr)\n",
+    "subs = list(set([f.split('_')[0] for f in os.listdir(datapath) if f[:3] == cntr]))\n",
     "\n",
+    "states = ['M0S0', 'M0S1', 'M1S0', 'M1S1']\n",
+    "sides = ['L', 'R']\n",
     "\n",
-    "# Read in priorly Block-Selection\n",
-    "block_indx_json = os.path.join(\n",
-    "    data_dir,\n",
-    "    'prep_jsons',\n",
-    "    'manual_block_selection_stimAmpRange.json'\n",
-    ")\n",
-    " \n",
-    "with open(block_indx_json) as f:\n",
-    "    block_indx = json.load(f, )\n",
+    "for sub in subs[:2]:\n",
     "\n",
+    "    files = list(set([f for f in os.listdir(datapath) if f[:6] == sub]))\n",
     "\n",
-    "FEATS = {}\n",
-    "fs=250\n",
-    "for run in block_acc.keys():\n",
-    "    print(f'start {run}')\n",
+    "    for combo in itertools.product(states, sides):  # loop over all combis of states and sides\n",
     "\n",
-    "    # to select subjects/runs to extract\n",
-    "    splits = run.split('_')\n",
-    "    # if splits[0] != '007': continue\n",
-    "    # if splits[2] != 'Off': continue\n",
+    "        sel_files = list(set(\n",
+    "            [f for f in files if\n",
+    "                np.logical_and(combo[0] in f, combo[1] in f)]\n",
+    "        ))\n",
+    "        if len(sel_files) == 0: continue  # no files for given sub-state-side combo\n",
+    "        \n",
+    "        \n",
+    "        print(combo)\n",
+    "        print(sel_files)\n",
     "\n",
-    "    for S, stim in enumerate(subscores[run].keys()):\n",
+    "        for S, stim in enumerate(subscores[run].keys()):\n",
     "\n",
     "        for b, block in enumerate([1, 2, 3]):\n",
     "\n",
@@ -333,10 +284,100 @@
     "                impacts=imp_i,\n",
     "                tapDict=tap_i,  # result of continTap\n",
     "                updrsSubScore=tapscore,\n",
-    "            )         \n",
+    "            )    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DUS008_ON_data_omni.csv',\n",
+       " 'DUS004_OFF_data_C.csv',\n",
+       " 'DUS024_ON_data_nostim.csv',\n",
+       " 'DUS013_OFF_data_NOSTIM.csv',\n",
+       " 'DUS011_OFF_data_B.csv',\n",
+       " 'DUS017_ON_data_omni.csv',\n",
+       " 'DUS010_OFF_data_NOSTIM.csv',\n",
+       " 'DUS011_OFF_data_NOSTIM.csv',\n",
+       " 'DUS014_ON_data_nostim.csv',\n",
+       " 'DUS022_ON_data_omni.csv',\n",
+       " 'DUS016_ON_data_B.csv',\n",
+       " 'DUS019_OFF_data_OMNI.csv',\n",
+       " 'DUS016_OFF_data_B.csv',\n",
+       " 'DUS008_OFF_data_NOSTIM.csv',\n",
+       " 'DUS026_ON_data_omni.csv',\n",
+       " 'DUS015_ON_data_C.csv',\n",
+       " 'DUS017_OFF_data_NOSTIM.csv',\n",
+       " 'DUS017_ON_data_nostim.csv',\n",
+       " 'DUS011_ON_data_B.csv',\n",
+       " 'DUS007_ON_data_nostim.csv',\n",
+       " 'DUS016_OFF_data_NOSTIM.csv',\n",
+       " 'DUS015_OFF_data_NOSTIM.csv',\n",
+       " 'DUS006_ON_data_A.csv',\n",
+       " 'DUS010_OFF_data_C.csv',\n",
+       " 'DUS014_OFF_data_NOSTIM.csv',\n",
+       " 'DUS019_OFF_data_NOSTIM.csv',\n",
+       " 'DUS009_ON_data_omni.csv',\n",
+       " 'DUS007_OFF_data_A.csv',\n",
+       " 'DUS023_ON_data_omni.csv',\n",
+       " 'DUS011_ON_data_nostim.csv',\n",
+       " 'DUS015_OFF_data_C.csv',\n",
+       " 'DUS004_OFF_data_nostim.csv',\n",
+       " 'DUS013_OFF_data_A.csv',\n",
+       " 'DUS006_OFF_data_A.csv',\n",
+       " 'DUS014_OFF_data_B.csv',\n",
+       " 'DUS022_ON_data_nostim.csv',\n",
+       " 'DUS007_OFF_data_NOSTIM.csv',\n",
+       " 'DUS006_OFF_data_nostim.csv',\n",
+       " 'DUS020_OFF_data_A.csv',\n",
+       " 'DUS022_OFF_data_omni.csv',\n",
+       " 'DUS020_ON_data_A.csv',\n",
+       " 'DUS023_ON_data_nostim.csv',\n",
+       " 'DUS026_OFF_data_omni.csv',\n",
+       " 'DUS021_OFF_data_C.csv',\n",
+       " 'DUS023_OFF_data_omni.csv',\n",
+       " 'DUS017_OFF_data_OMNI.csv',\n",
+       " 'DUS024_ON_data_omni.csv',\n",
+       " 'DUS010_ON_data_nostim.csv',\n",
+       " 'DUS025_OFF_data_OMNI.csv',\n",
+       " 'DUS014_ON_data_B.csv',\n",
+       " 'DUS006_ON_data_nostim.csv',\n",
+       " 'DUS010_ON_data_C.csv',\n",
+       " 'DUS024_OFF_data_NOSTIM.csv',\n",
+       " 'DUS016_ON_data_nostim.csv',\n",
+       " 'DUS025_OFF_data_nostim.csv',\n",
+       " 'DUS026_OFF_data_nostim.csv',\n",
+       " 'DUS008_OFF_data_OMNI.csv',\n",
+       " 'DUS026_ON_data_nostim.csv',\n",
+       " 'DUS007_ON_data_A.csv',\n",
+       " 'DUS024_OFF_data_OMNI.csv',\n",
+       " 'DUS021_OFF_data_NOSTIM.csv',\n",
+       " 'DUS013_ON_data_A.csv',\n",
+       " 'DUS020_OFF_data_NOSTIM.csv',\n",
+       " 'DUS025_ON_data_nostim.csv',\n",
+       " 'DUS015_ON_data_nostim.csv',\n",
+       " 'DUS025_ON_data_omni.csv',\n",
+       " 'DUS004_ON_data_C.csv',\n",
+       " 'DUS023_OFF_data_nostim.csv',\n",
+       " 'DUS008_ON_data_nostim.csv',\n",
+       " 'DUS022_OFF_data_nostim.csv']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cntr = 'dus'\n",
+    "datapath = utils_dataManagement.find_stored_data_path(cntr)\n",
+    "subs = list(set([f.split('_')[0] for f in os.listdir(datapath) if f[:3] == cntr]))\n",
     "\n",
-    "\n",
-    "\n"
+    "os.listdir(datapath)"
    ]
   },
   {
