WIP: feat extraction, debug in combo and rep

--- a/updrsTapping_own_group_exploration.ipynb
+++ b/updrsTapping_own_group_exploration.ipynb
@@ -437,7 +437,7 @@
     "    print(sub)\n",
     "\n",
     "    tempacc = block_acc[sub][-8]\n",
-    "    temptap, _, _ = tap_run.run_updrs_tapping(\n",
+    "    temptap, _, _ = tap_run.run_updrs_tap_finder(\n",
     "        acc_arr=tempacc, fs=250, already_preprocd=True,\n",
     "    )\n",
     "\n",
@@ -570,7 +570,7 @@
     "            block_n = block_indx[run][stim][b]\n",
     "            tap_acc = block_acc[run][block_n]\n",
     "\n",
-    "            tap_i, imp_i, acc_temp = tap_run.run_updrs_tapping(\n",
+    "            tap_i, imp_i, acc_temp = tap_run.run_updrs_tap_finder(\n",
     "                acc_arr=tap_acc, fs=fs, already_preprocd=True,\n",
     "            )\n",
     "            \n",
@@ -996,7 +996,7 @@
     "        ]\n",
     "        subscore = scores545[run_id, t_i]\n",
     "\n",
-    "        tap_inds, imp_inds, proc_triax = tap_run.run_updrs_tapping(\n",
+    "        tap_inds, imp_inds, proc_triax = tap_run.run_updrs_tap_finder(\n",
     "            acc_arr=sig, fs=fs, already_preprocd=False, #orig_fs=4000,\n",
     "        )\n",
     "        # ## check tap detect\n",
@@ -1128,7 +1128,7 @@
     "    \n",
     "    sig = accAll[:, :, run_id].T  # tri-axial acc sig\n",
     "\n",
-    "    tap_inds, imp_inds, proc_triax = tap_run.run_updrs_tapping(\n",
+    "    tap_inds, imp_inds, proc_triax = tap_run.run_updrs_tap_finder(\n",
     "        acc_arr=sig, fs=fs, already_preprocd=False,\n",
     "    )\n",
     "\n",
